--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -7,8 +7,35 @@
 
 body {
   background-color: #0B0C15;
+  font-family: 'Lato', sans-serif;
 }
 
 .App {
   padding: 0px 20px;
+}
+
+a.button {
+  text-decoration: none;
+  border: 1px solid none;
+  padding: 12px 40px;
+  margin: 10px;
+  color: white;
+  border-radius: 2px;
+
+  font-size: 16px;
+
+  &.primary {
+    background-color: #0D41E1;
+
+  }
+
+  &.secondary {
+    border: 1px solid white;
+  }
+
+  &.social {
+    padding: 0px;
+    margin: 0px;
+    color: #D3D3D3;
+  }
 }
