--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -8,6 +8,8 @@
 body {
   background-color: #0B0C15;
   font-family: 'Lato', sans-serif;
+  color: white;
+
 }
 
 .App {
@@ -38,4 +40,14 @@ a.button {
     margin: 0px;
     color: #D3D3D3;
   }
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+h4 {
+  font-weight: bold;
+  font-size: 16px;
 }
