--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -16,6 +16,8 @@ body {
   padding: 0px 20px;
 }
 
+
+
 a.button {
   text-decoration: none;
   border: 1px solid none;
@@ -42,6 +44,63 @@ a.button {
   }
 }
 
+button.button {
+  border: 1px solid #0D41E1;
+  padding: 12px 40px;
+  color: white;
+  border-radius: 2px;
+
+  font-size: 16px;
+
+  position: relative;
+
+
+
+
+
+  &.primary {
+    background-color: #0D41E1;
+
+
+  }
+
+  &.secondary {
+    border: 1px solid white;
+    background-color: unset;
+
+
+  }
+}
+
+.button {
+  cursor: pointer;
+  position: relative;
+
+  &:hover {
+    &::after {
+      content: "";
+      display: inline;
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      width: 100%;
+      height: 100%;
+
+      background-color: white;
+
+      opacity: 0.08;
+
+    }
+  }
+}
+
+.button-group {
+  display: flex;
+  justify-content: flex-start;
+  gap: 24px;
+}
+
 h2 {
   font-weight: bold;
   font-size: 20px;
@@ -52,4 +111,45 @@ h2 {
 h4 {
   font-weight: bold;
   font-size: 16px;
+}
+
+a.social-link {
+  color: white;
+  text-decoration: none;
+
+  .icon {
+    font-size: 42px;
+  }
+}
+
+
+// Form elements
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  margin-bottom: 10px;
+
+  label {
+    font-size: 16px;
+    font-weight: normal;
+  }
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  background-color: #232B32;
+  border-radius: 4px;
+  border: none;
+}
+
+input[type="text"],
+input[type="email"] {
+  height: 3em;
+}
+
+textarea {
+  height: 15em;
 }
