Added link.js for storing all links, updated social links as well as internal links

--- a/portfolio/src/sections/Hero/style.scss
+++ b/portfolio/src/sections/Hero/style.scss
@@ -29,5 +29,10 @@ main {
                 margin: 0px;
             }
         }
+
+        .socials {
+            display: flex;
+            gap: 12px;
+        }
     }
 }
