--- a/portfolio/src/components/Header/style.scss
+++ b/portfolio/src/components/Header/style.scss
@@ -32,6 +32,7 @@ header {
 
 
             width: calc(100vw - 64px);
+            max-width: 380px;
 
 
             display: flex;
@@ -60,38 +61,38 @@ header {
 
                 gap: 10px;
 
-                .sidebar-link {
-                    display: flex;
-                    padding: 10px;
-                    justify-content: center;
-                    align-items: center;
-
-                    a {
-                        text-decoration: none;
-                        color: white;
-                        font-size: 20px;
-                        width: 60%;
-                        height: 100%;
-                        text-align: center;
-                    }
-
-                    // animation: sidebar_entry_anim 300ms ease-in;
 
 
-                }
+                // animation: sidebar_entry_anim 300ms ease-in;
+
+
             }
         }
-    }
-}
 
-@keyframes sidebar_entry_anim {
-    0% {
-        width: 0px;
-        opacity: 0;
     }
 
-    100% {
-        width: 100%;
-        opacity: 1;
+
+    nav {
+        display: flex;
+
+        font-size: 20px;
+
     }
+
+    .nav-link {
+        display: flex;
+        padding: 10px;
+        justify-content: center;
+        align-items: center;
+
+        a {
+            text-decoration: none;
+            color: white;
+            font-size: 20px;
+            width: 60%;
+            height: 100%;
+            text-align: center;
+        }
+    }
+
 }
