--- a/portfolio/src/sections/Skills/style.scss
+++ b/portfolio/src/sections/Skills/style.scss
@@ -21,6 +21,7 @@ section#skills {
                     gap: 5px;
                     justify-content: center;
                     align-items: center;
+                    font-size: 14px;
                 }
             }
         }
