--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -5,6 +5,12 @@
 
 }
 
+input:focus-visible,
+textarea:focus-visible {
+  border: none;
+  outline: 2px solid #D3D3D3;
+}
+
 body {
   background-color: #0B0C15;
   font-family: 'Lato', sans-serif;
@@ -143,6 +149,10 @@ textarea {
   background-color: #232B32;
   border-radius: 4px;
   border: none;
+  color: white;
+  padding: 8px;
+  font-family: 'Lato', sans-serif;
+  letter-spacing: 0.8px;
 }
 
 input[type="text"],
@@ -161,6 +171,12 @@ textarea {
 // Desktop + big screen tablets only
 @media screen and (min-width:768px) {
 
+  .cta {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+
 
   .hide-on-desktop {
     display: none;
@@ -175,6 +191,21 @@ textarea {
     margin: auto;
 
 
+  }
+
+  h2 {
+    font-size: 28px;
+  }
+
+  h4 {
+    font-size: 20px;
+  }
+
+  .contact-section-wrapper {
+    display: flex;
+    gap: 45px;
+
+    margin-bottom: 90px;
   }
 
 
