--- a/portfolio/src/sections/Projects/style.scss
+++ b/portfolio/src/sections/Projects/style.scss
@@ -7,10 +7,10 @@ section#projects {
         gap: 18px;
 
         .project {
+
             padding: 14px 32px;
             display: flex;
             flex-direction: column;
-            flex-wrap: wrap;
             gap: 22px;
 
             .project-image {
@@ -25,7 +25,7 @@ section#projects {
             .project-details {
                 display: flex;
                 flex-direction: column;
-                gap: 8px;
+                gap: 10px;
 
                 .project-title {
                     font-weight: bold;
@@ -35,6 +35,7 @@ section#projects {
                 .project-description {
                     font-size: 12px;
                     color: #D0D2D3;
+                    font-weight: normal;
                 }
 
                 .project-links {
@@ -46,6 +47,36 @@ section#projects {
                     }
                 }
             }
+
+
+
+            @media screen and (min-width:464px) {
+                flex-direction: row;
+
+                .project-image {
+
+
+
+
+                    img {
+                        width: 145px;
+                        height: 145px;
+                    }
+                }
+
+                .project-details {
+                    .project-title {
+                        font-size: 18px;
+                    }
+
+                    .project-description {
+                        font-size: 16px;
+                    }
+                }
+
+                max-width: 750px;
+            }
+
         }
     }
 }
