--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -153,6 +153,10 @@ textarea {
   padding: 8px;
   font-family: 'Lato', sans-serif;
   letter-spacing: 0.8px;
+
+  &.error:focus-visible {
+    outline: #e10d0d 1px solid;
+  }
 }
 
 input[type="text"],
