--- a/portfolio/src/App.scss
+++ b/portfolio/src/App.scss
@@ -215,3 +215,69 @@ textarea {
 
 
 }
+
+
+// Bigg screen
+@media screen and (min-width:2400px) {
+  .App {
+    max-width: 60%;
+    margin: auto;
+
+  }
+
+
+  h2 {
+    font-size: 38px;
+  }
+
+  h4 {
+    font-size: 30px;
+  }
+
+
+  .input-group {
+
+    gap: 20px;
+    margin-bottom: 10px;
+
+    label {
+      font-size: 24px;
+      font-weight: normal;
+    }
+  }
+
+  // input[type="text"],
+  // input[type="email"],
+  // textarea {
+  //   background-color: #232B32;
+  //   border-radius: 4px;
+  //   border: none;
+  //   color: white;
+  //   padding: 8px;
+  //   font-family: 'Lato', sans-serif;
+  //   letter-spacing: 0.8px;
+
+  //   &.error:focus-visible {
+  //     outline: #e10d0d 1px solid;
+  //   }
+  // }
+
+  input[type="text"],
+  input[type="email"] {
+    height: 6em;
+  }
+
+  textarea {
+    height: 20em;
+  }
+
+  button.button {
+
+    padding: 32px 90px;
+    color: white;
+    border-radius: 2px;
+
+    font-size: 28px;
+  }
+
+}
