--- a/portfolio/src/sections/Projects/style.scss
+++ b/portfolio/src/sections/Projects/style.scss
@@ -77,6 +77,46 @@ section#projects {
                 max-width: 750px;
             }
 
+
+            // Bigg screen
+            @media screen and (min-width:2400px) {
+                max-width: 60%;
+                font-size: 24px;
+
+                .project-image {
+
+
+
+
+                    img {
+                        width: 20vh;
+                        height: 20vh;
+                    }
+                }
+
+                .project-details {
+                    .project-title {
+                        font-size: 32px;
+                    }
+
+                    .project-description {
+                        font-size: 24px;
+                    }
+
+                    .project-links {
+                        padding: 20px;
+                        display: flex;
+                        gap: 40px;
+
+                        a {
+                            scale: 2;
+                        }
+                    }
+
+
+                }
+            }
+
         }
     }
 }
