--- a/portfolio/src/sections/Skills/style.scss
+++ b/portfolio/src/sections/Skills/style.scss
@@ -25,6 +25,25 @@ section#skills {
                 }
             }
         }
+
+
+        // Bigg screen
+        @media screen and (min-width:2400px) {
+            .skills-card {
+                .skills-list {
+                    .skill {
+                        padding: 20px;
+                        gap: 30px;
+                        font-size: 20px;
+
+                        svg {
+                            scale: 2;
+
+                        }
+                    }
+                }
+            }
+        }
     }
 
 }
